# wwise-audio-tools

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  annotated.html  annotated_dup.js  bnk_8hpp.html  bnk_8hpp.js  bnk_8hpp__incl.map  bnk_8hpp__incl.md5  bnk_8hpp_source.html  classes.html  compile_commands.json  dir_000003_000000.html  dir_000004_000000.html  dir_0654e8dfd648c03cbd9270bb77b082ca.html  dir_0654e8dfd648c03cbd9270bb77b082ca.js  dir_165a21b8259c6b232dc3363bf5d34652.html  dir_165a21b8259c6b232dc3363bf5d34652.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_79bea0536707dd4c2d8e72123bdbfc0b.html  dir_a7c09de8b82398ffccc57f552ffd4086.html  dir_a7c09de8b82398ffccc57f552ffd4086_dep.map  dir_a7c09de8b82398ffccc57f552ffd4086_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  event__name__to__id_8hpp_source.html  files.html  graph_legend.html  index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaces_dup.js  namespacewwtools_1_1bnk.html  (+21 more)
.github/workflows/: check-build.yml  doxygen-publish.yml  release.yml
docs/: Doxyfile
include/: Bit_stream.h  codebook.h  errors.h  packed_codebooks.h  revorb.h  w3sc.h  ww2ogg.h  wwiseaudiotools.h  wwriff.h  wwt_bnk.hpp  wwt_w3sc.hpp
include/kaitai/: exceptions.h  kaitaistream.h
include/kaitai/structs/: bnk.h  vlq.h  w3sc.h  wem.h
include/revorb/: revorb.h  revorb.hpp
include/ww2ogg/: bitstream.h  codebook.h  crc.h  errors.h  packed_codebooks.h  ww2ogg.h  wwriff.h
include/wwtools/: bnk.hpp  w3sc.hpp  wwtools.h  wwtools.hpp
include/wwtools/util/: event_name_to_id.hpp  write.hpp
ksy/: bnk.ksy  bundle.ksy  w3sc.ksy  wem.ksy
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  namespaces_0.js  searchdata.js
src/: bnk.cpp  codebook.cpp  crc.c  main.cpp  packed_codebooks.cpp  revorb.cpp  utils.cpp  w3sc.cpp  ww2ogg.cpp  ww2ogg.cpp.bak  wwiseaudiotools.cpp  wwriff.cpp  wwt_bnk.cpp  wwt_w3sc.cpp
src/kaitai/: bnk.cpp  kaitaistream.cpp
src/kaitai/structs/: bnk.cpp  vlq.cpp  w3sc.cpp  wem.cpp
src/revorb/: revorb.cpp
src/ww2ogg/: codebook.cpp  crc.c  packed_codebooks.cpp  packed_codebooks_aoTuV_603.cpp  ww2ogg.cpp  wwriff.cpp
src/wwtools/: bnk.cpp  w3sc.cpp  wwtools.cpp
src/wwtools/util/: write.cpp
tests/: test.cpp  test1.wem  wem.cpp
